# tracking_habit_service

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  settings.py
api/: auth.py  crud.py  views.py
bot/: .dockerignore  .gitignore  Dockerfile  loader.py  main.py  requirements.txt
bot/config_data/: config.py
bot/database/: db_main.py  models.py
bot/database/schedule/: get_data_schedule.py
bot/handlers/custom_handlers/: __init__.py  cancel.py  create.py  delete.py  habits.py  token.py  tracking.py  update.py
bot/handlers/default_handlers/: __init__.py  cancel.py  echo.py  help.py  start.py
bot/states/: auth.py  create.py  delete.py  perform.py  update.py
bot/utils/: set_bot_commands.py
bot/utils/auth/: authentication.py
bot/utils/req/: crud.py
bot/utils/schedule/: background.py  create_message.py  send_message.py
migrates/: env.py
migrations/: env.py
migrations/versions/: 05e21d7eea19_corrected_migrate_total_count_view_.py  6134528d0045_create_database.py  647bd025697b_added_total_count_view_total_count_skip_.py
models/: __init__.py  base.py  db_main.py  user.py
routers/: user.py
schema/: jwt.py  user.py
services/: jwt.py
supervisor/: Dockerfile  main_send_message_bot.conf  main_send_message_bot.py  main_send_message_bot.sh
systemd/: Dockerfile  main_send_message_bot.py  main_send_message_bot.service
